Updated font awsome. Bug where icon not showing

--- a/app/assets/stylesheets/style/profile.scss
+++ b/app/assets/stylesheets/style/profile.scss
@@ -30,6 +30,12 @@ html {
   }
 }
 
+.newsfeed-link {
+  height: 50px;
+  width: 50px;
+  background-color: blue;
+}
+
 
 .landing-page-container {
   display: flex;
